--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "2d_sim"
 path = "src/2d_sim.rs"
 
+[[bin]]
+name = "3d_sim"
+path = "src/3d_sim.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
