--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,11 @@ rayon = "*"
 itertools = "0.12.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[profile.analysis]
+inherits = "release"
+debug = 1
+
+[features]
+default = []
+rendering = []
