Use a new binary for benchmark

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ path = "src/3d_sim.rs"
 name = "zero_gravity"
 path = "src/zero_gravity.rs"
 
+[[bin]]
+name = "benchmark"
+path = "src/benchmark.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -31,4 +35,3 @@ debug = 1
 
 [features]
 default = []
-rendering = []
